--- a/docker-compose.preprod.yml
+++ b/docker-compose.preprod.yml
@@ -1,6 +1,6 @@
 services:
   cardano-node-ogmios-preprod:
-    image: cardanosolutions/cardano-node-ogmios:v6.1.0_8.7.3-preprod
+    image: cardanosolutions/cardano-node-ogmios:v5.6.0_1.35.7-preprod
     profiles: ["preprod"]
     logging:
       driver: "json-file"
@@ -14,6 +14,8 @@ services:
     volumes:
       - node-db-preprod:/db
       - node-ipc-preprod:/ipc
+    environment:
+      CARDANO_NODE_SOCKET_PATH: /ipc/node.socket
 
   kupo-preprod:
     image: cardanosolutions/kupo:v2.7.2
