--- a/docker-compose.preprod.yml
+++ b/docker-compose.preprod.yml
@@ -16,6 +16,8 @@ services:
       - node-ipc-preprod:/ipc
     environment:
       CARDANO_NODE_SOCKET_PATH: /ipc/node.socket
+    extra_hosts:
+        - "host.docker.internal:host-gateway"
 
   kupo-preprod:
     image: cardanosolutions/kupo:v2.5.1
@@ -55,6 +57,8 @@ services:
     volumes:
       - node-ipc-preprod:/tmp
       - ./daemon.toml:/etc/oura/daemon.toml
+    extra_hosts:
+        - "host.docker.internal:host-gateway"
 
 volumes:
   node-db-preprod:
