--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,49 @@
-name: kupmios
+name: kupmios-next
 
 services:
-  haproxy:
-    image: haproxy:2.8.3
-    profiles: ["mainnet", "preprod", "preview"]
-    env_file: ./.env
-    ports:
-      - 80:8080
-      - 443:8443
-    shm_size: '2gb'
-    volumes:
-      - ./config/haproxy:/usr/local/etc/haproxy
-      - /etc/ssl/ssl_key.pem:/ssl_key.pem
-    restart: on-failure
+  cardano-node-ogmios-preprod:
+    image: cardanosolutions/cardano-node-ogmios:v6.5.0_9.0.0-preprod
+    profiles: ["preprod"]
     logging:
       driver: "json-file"
       options:
-        max-size: "200k"
-        max-file: "10"
+        max-size: "400k"
+        max-file: "20"
+    ports:
+      - 127.0.0.1:1338:1337
+      - 3001:3000
+    restart: on-failure
+    volumes:
+      - node-db-preprod:/db
+      - node-ipc-preprod:/ipc
+    environment:
+      CARDANO_NODE_SOCKET_PATH: /ipc/node.socket
 
-include:
-  - docker-compose.mainnet.yml
-  - docker-compose.preprod.yml
-  - docker-compose.preview.yml
+  kupo-preprod:
+    image: cardanosolutions/kupo:v2.8.0
+    profiles: ["preprod"]
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "400k"
+        max-file: "20"
+    ports:
+      - 127.0.0.1:1443:1442
+    command: [
+      "--node-socket", "/ipc/node.socket",
+      "--node-config", "/config/cardano-node/config.json",
+      "--since", "${KUPO_SINCE_PREPROD:-origin}",
+      "--match", "${KUPO_MATCH_PREPROD:-*}",
+      "--workdir", "/db",
+      "--host", "0.0.0.0",
+      "--port", "1442"
+    ]
+    volumes:
+      - kupo-db-preprod:/db
+      - node-ipc-preprod:/ipc
+      - ./config/cardano-configurations/network/preprod:/config
+
+volumes:
+  node-db-preprod:
+  node-ipc-preprod:
+  kupo-db-preprod:
